Добавить недостающие файлы

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         input.value = "+7";
     </script>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
