Появилась работа библиотеки

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Page Section Scroll with Header and Custom Background</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./libs/index1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
@@ -35,7 +36,7 @@
 
 <body>
     <header class="header">
-        <div class="company-name">Beautyees</div>
+        <div class="company-name" id="el1">Beautyees</div>
         <div class="logo-container">
             <img src="images/Безымянный11123232323233223.png" alt="Beautyees Logo" class="logo">
         </div>
@@ -329,7 +330,7 @@
         input.value = "+7";
     </script>
 
-    <script type="module" src="script.js"></script>
+<script src="script.js" type="module" defer></script>
 </body>
 
 </html>
